# voice_realtime_show_case_qml

./: AudioChartView.qml  CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  qml.qrc
src/audio/: x_y__series_io_device.cpp  x_y__series_io_device.h
src/gui/: qml_chart_handler.cpp  qml_chart_handler.h
